<resources>
    <string name="app_name">Dammi</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">close</string>

    <!-- NAVIGATION DRAWER MENU -->
    <string name="nav_title_1">Home</string>
    <string name="nav_title_2">Activities</string>
    <string name="nav_title_3">Hosts</string>
    <string name="nav_title_4">Search</string>
    <string name="nav_title_5">Login</string>
    <string name="nav_title_6">Help</string>
    <string name="nav_title_7">Preferences</string>
    <string name="nav_title_8">About Us</string>
    <string name="nav_title_9">Logout</string>

    <string name="search">search</string>
    <string name="search_hint">places, foods..</string>


    <!-- NAVIGATION -->
    <string name="arrow_home">&#xe900;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authority">com.dammi.dammi.search.MySuggestionProvider</string>
    <string name="selection">\?</string>
    <string name="nearby">nearby</string>

    <!-- Google plus user credentials -->
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="overview">OVERVIEW:</string>

    <!-- OVERVIEWS -->
    <string name="overview_details">
         -Experience a hands-on, practical lesson with a local on how to cook like a Nepali!\n
        -Tour the bazaars in Kathmandu to source fresh ingredients.\n
        -Cook the most popular Nepali delicacies like Momo, Dal Bhat and Paratha.\n
        -Have a lunch with prepared food at a local house and create life-long memories!\n
    </string>
    <string name="home_list_title">Categories</string>
    <string name="footer_txt_developedby">Developed By: Dammi Team</string>
    <string name="footer_txt_copyright">© DammiTeam</string>
    <string name="fblink_tv">Facebook:https://www.facebook.com/Dammi-Travels-771893976267329/?__mref=message_bubble</string>
    <string name="emaillink_tv">Gmail:dammi@gmail.com</string>
    <string name="website_tv">Website:http://www.dammitravels.com</string>
    <string name="banner_small_txt">1.01</string>
    <string name="banner_large_txt">Dammi Tours</string>

</resources>
