<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/first">
    <item android:id="@+id/nav_item_1"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/nav_title_1"/>

    <item android:id="@+id/nav_item_2"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_2"/>

    <item android:id="@+id/nav_item_3"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_3"/>
    </group>
    <item android:id="@+id/nav_item_4"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_4"/>

    <item android:id="@+id/nav_item_5"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_5"/>

    <item android:id="@+id/nav_item_6"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_6"/>

    <item android:id="@+id/nav_item_7"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_7"/>

    <item android:id="@+id/nav_item_8"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_8"/>

    <item android:id="@+id/nav_item_9"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_9"/>

    <item android:id="@+id/nav_item_10"
        android:icon="@drawable/tour"
        android:title="@string/nav_title_10"/>


</menu>